--- a/qt/WeChat/registerdialog.ui
+++ b/qt/WeChat/registerdialog.ui
@@ -790,6 +790,9 @@
                <family>等线</family>
               </font>
              </property>
+             <property name="cursor">
+              <cursorShape>PointingHandCursor</cursorShape>
+             </property>
              <property name="text">
               <string>获取</string>
              </property>
@@ -919,6 +922,9 @@
                  <bold>true</bold>
                 </font>
                </property>
+               <property name="cursor">
+                <cursorShape>PointingHandCursor</cursorShape>
+               </property>
                <property name="styleSheet">
                 <string notr="true">QPushButton#submitPushButton {
     background-color: rgb(5, 193, 96);
@@ -962,6 +968,9 @@ QPushButton#submitPushButton:pressed {
                  <pointsize>13</pointsize>
                  <bold>true</bold>
                 </font>
+               </property>
+               <property name="cursor">
+                <cursorShape>PointingHandCursor</cursorShape>
                </property>
                <property name="text">
                 <string>返回</string>
