--- a/qt/WeChat/resetdialog.ui
+++ b/qt/WeChat/resetdialog.ui
@@ -567,6 +567,9 @@
                <height>16777215</height>
               </size>
              </property>
+             <property name="cursor">
+              <cursorShape>PointingHandCursor</cursorShape>
+             </property>
              <property name="text">
               <string>获取</string>
              </property>
@@ -695,6 +698,9 @@
                  <bold>true</bold>
                 </font>
                </property>
+               <property name="cursor">
+                <cursorShape>PointingHandCursor</cursorShape>
+               </property>
                <property name="styleSheet">
                 <string notr="true">QPushButton#submitPushButton {
     background-color: rgb(5, 193, 96);
@@ -737,6 +743,9 @@ QPushButton#submitPushButton:pressed {
                  <pointsize>13</pointsize>
                  <bold>true</bold>
                 </font>
+               </property>
+               <property name="cursor">
+                <cursorShape>PointingHandCursor</cursorShape>
                </property>
                <property name="text">
                 <string>返回</string>
