--- a/qt/WeChat/chatdialog.ui
+++ b/qt/WeChat/chatdialog.ui
@@ -19,6 +19,10 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="rc.qrc">
+    <normaloff>:/img/loginDialog/img/wechat.svg</normaloff>:/img/loginDialog/img/wechat.svg</iconset>
+  </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <property name="spacing">
     <number>0</number>
@@ -121,7 +125,7 @@
           <number>24</number>
          </property>
          <item>
-          <widget class="QCheckBox" name="chatCB">
+          <widget class="QRadioButton" name="chatCB">
            <property name="minimumSize">
             <size>
              <width>20</width>
@@ -172,7 +176,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QCheckBox" name="usersCB">
+          <widget class="QRadioButton" name="usersCB">
            <property name="minimumSize">
             <size>
              <width>20</width>
@@ -241,7 +245,7 @@
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_4">
          <item>
-          <widget class="QCheckBox" name="settingCB">
+          <widget class="QPushButton" name="settingCB">
            <property name="minimumSize">
             <size>
              <width>20</width>
@@ -261,29 +265,16 @@
             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#ffffff;&quot;&gt;设置及其他&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
            </property>
            <property name="styleSheet">
-            <string notr="true">#settingCB::indicator:unchecked{
-	width: 20px;
-    height: 20px;
+            <string notr="true">#settingCB{
+	border-style:none;
 	image: url(:/img/loginDialog/img/settings.svg);
 }
 
-#settingCB::indicator:checked{
-		width: 20px;
-    height: 20px;
+
+#settingCB:pressed{
 	image: url(:/img/loginDialog/img/settings_clicked.svg);
 }
-
-#settingCB::indicator:hover{
-		width: 20px;
-    height: 20px;
-	image: url(:/img/loginDialog/img/settings_clicked.svg);
-}
-
-#settingCB::indicator:pressed{
-		width: 20px;
-    height: 20px;
-	image: url(:/img/loginDialog/img/settings.svg);
-}</string>
+</string>
            </property>
            <property name="text">
             <string/>
@@ -513,6 +504,9 @@ padding-top : 4px</string>
             </item>
             <item>
              <widget class="QPushButton" name="clearPB">
+              <property name="enabled">
+               <bool>true</bool>
+              </property>
               <property name="minimumSize">
                <size>
                 <width>16</width>
@@ -625,7 +619,7 @@ border-style:none;
        </widget>
       </item>
       <item>
-       <widget class="QListWidget" name="userList">
+       <widget class="QListWidget" name="chatUserList">
         <property name="minimumSize">
          <size>
           <width>225</width>
@@ -645,6 +639,11 @@ border-style:none;
 	background-color: rgb(229, 229, 229);
 }</string>
         </property>
+        <item>
+         <property name="text">
+          <string>chat</string>
+         </property>
+        </item>
        </widget>
       </item>
       <item>
@@ -668,6 +667,32 @@ border-style:none;
 	background-color: rgb(229, 229, 229);
 }</string>
         </property>
+        <item>
+         <property name="text">
+          <string>search</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item>
+       <widget class="QListWidget" name="conUserList">
+        <property name="minimumSize">
+         <size>
+          <width>225</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>225</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <item>
+         <property name="text">
+          <string>con</string>
+         </property>
+        </item>
        </widget>
       </item>
      </layout>
@@ -698,7 +723,7 @@ border-style:none;
        <number>0</number>
       </property>
       <item>
-       <widget class="QWidget" name="widget_3" native="true">
+       <widget class="QWidget" name="titleWD" native="true">
         <property name="minimumSize">
          <size>
           <width>0</width>
@@ -852,9 +877,15 @@ border-style:none;
          </item>
          <item>
           <widget class="QWidget" name="widget_7" native="true">
+           <property name="minimumSize">
+            <size>
+             <width>140</width>
+             <height>0</height>
+            </size>
+           </property>
            <property name="maximumSize">
             <size>
-             <width>16777215</width>
+             <width>140</width>
              <height>50</height>
             </size>
            </property>
@@ -878,13 +909,13 @@ border-style:none;
              <widget class="QWidget" name="widget_4" native="true">
               <property name="minimumSize">
                <size>
-                <width>0</width>
+                <width>140</width>
                 <height>25</height>
                </size>
               </property>
               <property name="maximumSize">
                <size>
-                <width>16777215</width>
+                <width>140</width>
                 <height>25</height>
                </size>
               </property>
@@ -1208,7 +1239,7 @@ border-style:none;
                  </property>
                  <property name="sizeHint" stdset="0">
                   <size>
-                   <width>2</width>
+                   <width>5</width>
                    <height>20</height>
                   </size>
                  </property>
@@ -1240,7 +1271,7 @@ border-style:none;
         <property name="maximumSize">
          <size>
           <width>16777215</width>
-          <height>650</height>
+          <height>16777215</height>
          </size>
         </property>
        </widget>
