--- a/qt/WeChat/chatdialog.ui
+++ b/qt/WeChat/chatdialog.ui
@@ -619,7 +619,7 @@ border-style:none;
         <property name="styleSheet">
          <string notr="true">#chatUserList{
 	background-color: rgb(229, 229, 229);
-outline: 0px;
+	outline: 0px;
 }
 
 #chatUserList::item:hover{
@@ -633,6 +633,39 @@ outline: 0px;
 	background-color: rgb(198, 198, 198);
 	color: rgb(0, 0, 0);
 	outline :none;
+}
+
+QScrollBar:vertical {
+    width: 7px;
+    background: transparent;
+    margin: 0px;
+    border-radius: 3px;
+}
+
+QScrollBar::handle:vertical {
+    background: #b9b9b9;
+    min-height: 25px;
+	max-height: 25px;
+    border-radius: 3px;
+}
+
+QScrollBar::handle:vertical:hover {
+    background: #A8A8A8;
+}
+
+QScrollBar::add-line:vertical, QScrollBar::sub-line:vertical {
+    height: 0px;
+    background: none;
+}
+
+QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
+    background: none;
+}
+
+/* 禁用水平滚动条 */
+QScrollBar:horizontal {
+    height: 0px;
+    background: transparent;
 }</string>
         </property>
        </widget>
@@ -843,12 +876,16 @@ outline: 0px;
               <property name="font">
                <font>
                 <family>等线</family>
-                <pointsize>15</pointsize>
-                <bold>false</bold>
+                <pointsize>14</pointsize>
+                <stylestrategy>PreferAntialias</stylestrategy>
+                <fontweight>Medium</fontweight>
                </font>
               </property>
               <property name="autoFillBackground">
                <bool>false</bool>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">color: rgb(0, 0, 0);</string>
               </property>
               <property name="text">
                <string>阿柳</string>
