--- a/qt/WeChat/chatpagewidget.ui
+++ b/qt/WeChat/chatpagewidget.ui
@@ -639,6 +639,7 @@
            <property name="styleSheet">
             <string notr="true">#msgList{
 	outline: none;
+	border-style:none;
 }</string>
            </property>
           </widget>
