--- a/qt/WeChat/messagewidget.ui
+++ b/qt/WeChat/messagewidget.ui
@@ -19,13 +19,13 @@
   <property name="maximumSize">
    <size>
     <width>16777215</width>
-    <height>84</height>
+    <height>16777215</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
+  <layout class="QVBoxLayout" name="verticalLayout_3">
    <property name="spacing">
     <number>0</number>
    </property>
@@ -36,9 +36,6 @@
     <number>0</number>
    </property>
    <property name="rightMargin">
-    <number>0</number>
-   </property>
-   <property name="bottomMargin">
     <number>0</number>
    </property>
    <item>
@@ -129,10 +126,26 @@ background-color: rgb(218, 218, 218);
     </widget>
    </item>
    <item>
+    <spacer name="verticalSpacer_4">
+     <property name="orientation">
+      <enum>Qt::Orientation::Vertical</enum>
+     </property>
+     <property name="sizeType">
+      <enum>QSizePolicy::Policy::Fixed</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>12</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item>
     <widget class="QWidget" name="widget" native="true">
      <property name="minimumSize">
       <size>
-       <width>0</width>
+       <width>400</width>
        <height>36</height>
       </size>
      </property>
@@ -185,7 +198,7 @@ background-color: rgb(218, 218, 218);
         <property name="maximumSize">
          <size>
           <width>16777215</width>
-          <height>36</height>
+          <height>16777215</height>
          </size>
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout_4">
@@ -205,28 +218,74 @@ background-color: rgb(218, 218, 218);
           <number>0</number>
          </property>
          <item>
-          <widget class="QLabel" name="headLB_left">
+          <widget class="QWidget" name="widget_2" native="true">
            <property name="minimumSize">
             <size>
              <width>34</width>
-             <height>34</height>
+             <height>0</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
              <width>34</width>
-             <height>34</height>
+             <height>16777215</height>
             </size>
            </property>
-           <property name="styleSheet">
-            <string notr="true">#headLB_left{
+           <layout class="QVBoxLayout" name="verticalLayout_2">
+            <property name="spacing">
+             <number>0</number>
+            </property>
+            <property name="leftMargin">
+             <number>0</number>
+            </property>
+            <property name="topMargin">
+             <number>0</number>
+            </property>
+            <property name="rightMargin">
+             <number>0</number>
+            </property>
+            <property name="bottomMargin">
+             <number>0</number>
+            </property>
+            <item>
+             <widget class="QLabel" name="headLB_left">
+              <property name="minimumSize">
+               <size>
+                <width>34</width>
+                <height>34</height>
+               </size>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>34</width>
+                <height>34</height>
+               </size>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">#headLB_left{
 	
 	image: url(:/img/loginDialog/img/avatar/AL.jpg);
 }</string>
-           </property>
-           <property name="text">
-            <string/>
-           </property>
+              </property>
+              <property name="text">
+               <string/>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <spacer name="verticalSpacer_2">
+              <property name="orientation">
+               <enum>Qt::Orientation::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>4</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+           </layout>
           </widget>
          </item>
          <item>
@@ -235,6 +294,12 @@ background-color: rgb(218, 218, 218);
             <size>
              <width>0</width>
              <height>36</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>400</width>
+             <height>16777215</height>
             </size>
            </property>
            <property name="font">
@@ -270,6 +335,9 @@ background-color: rgb(218, 218, 218);
            <property name="scaledContents">
             <bool>false</bool>
            </property>
+           <property name="wordWrap">
+            <bool>true</bool>
+           </property>
            <property name="indent">
             <number>0</number>
            </property>
@@ -302,7 +370,7 @@ background-color: rgb(218, 218, 218);
         <property name="maximumSize">
          <size>
           <width>16777215</width>
-          <height>36</height>
+          <height>16777215</height>
          </size>
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout_3">
@@ -331,8 +399,8 @@ background-color: rgb(218, 218, 218);
            </property>
            <property name="maximumSize">
             <size>
-             <width>16777215</width>
-             <height>36</height>
+             <width>400</width>
+             <height>16777215</height>
             </size>
            </property>
            <property name="font">
@@ -366,34 +434,83 @@ background-color: rgb(218, 218, 218);
            <property name="scaledContents">
             <bool>false</bool>
            </property>
+           <property name="wordWrap">
+            <bool>true</bool>
+           </property>
            <property name="indent">
             <number>0</number>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QLabel" name="headLB">
+          <widget class="QWidget" name="headWD" native="true">
            <property name="minimumSize">
             <size>
              <width>34</width>
-             <height>34</height>
+             <height>0</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
              <width>34</width>
-             <height>34</height>
+             <height>16777215</height>
             </size>
            </property>
-           <property name="styleSheet">
-            <string notr="true">#headLB{
+           <layout class="QVBoxLayout" name="verticalLayout">
+            <property name="spacing">
+             <number>0</number>
+            </property>
+            <property name="leftMargin">
+             <number>0</number>
+            </property>
+            <property name="topMargin">
+             <number>0</number>
+            </property>
+            <property name="rightMargin">
+             <number>0</number>
+            </property>
+            <property name="bottomMargin">
+             <number>0</number>
+            </property>
+            <item>
+             <widget class="QLabel" name="headLB">
+              <property name="minimumSize">
+               <size>
+                <width>34</width>
+                <height>34</height>
+               </size>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>34</width>
+                <height>34</height>
+               </size>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">#headLB{
 	
 	image: url(:/img/loginDialog/img/avatar/me.jpg);
 }</string>
-           </property>
-           <property name="text">
-            <string/>
-           </property>
+              </property>
+              <property name="text">
+               <string/>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <spacer name="verticalSpacer">
+              <property name="orientation">
+               <enum>Qt::Orientation::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>104</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+           </layout>
           </widget>
          </item>
         </layout>
@@ -417,6 +534,19 @@ background-color: rgb(218, 218, 218);
       </item>
      </layout>
     </widget>
+   </item>
+   <item>
+    <spacer name="verticalSpacer_3">
+     <property name="orientation">
+      <enum>Qt::Orientation::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>16</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
